Add NTD reportable flag to trips, runs, vehicle

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1421,6 +1421,7 @@ en:
   vehicle_form_details_heading: "Details"
   vehicle_form_information_heading: "Additional Information"
   vehicle_form_reportable_label: "Vehicle Should Appear on Vehicle Report"
+  ntd_reportable_label: "Appear on NTD Report?"
   vehicle_form_last_odometer_reading: "Last Reported Mileage"
   vehicle_form_initial_mileage: "Initial Mileage"
   vehicle_form_capacity_heading: "Capacity"
