--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -908,6 +908,13 @@ en:
   address_group_label: 'Type'
   new_provider_common_address_dialog_title: "New Address"
 
+  # Fare
+  fare_related_settings: "Fare Configurations"
+  fare_type: "Type"
+  pre_or_post_trip: "Record during pre-trip or post-trip?"
+  fixed_fare: "Previously specified for trip?"
+  update_fare_related_settings: "Update"
+
   # ETA
   eta_related_settings: "ETA Calculation Related Settings"
   passenger_load_min: "Passenger Load Time (min)"
