restructure header logo and brand name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  header_content: "<a href='/en' id='logo'>RidePilot</a>"
+  header_content: "<a href='https://www.rideuta.com/'><img src='/uta-logo.svg'></a>"
   #addresses
   address_name: "Address Name"
   address_nickname: "Nickname"
